fix word overflow

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -76,7 +76,6 @@ td, th{
       margin: 15px auto;
       border-color: #e0e0e0;
       word-wrap: break-word;
-      white-space: nowrap;
 }
 
 
